feature(backend): updating the old symmetry into the more safe asymmetry
